Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12362

kernel warning 'do not call blocking ops when !TASK_RUNNING ' in ptlrpcd

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Upstream, Lustre 2.15.0
    • Lustre 2.12.0
    • ARM client running TOSS kernel 4.14.0-115.6.1.1chaos.ch6a.aarch64
    • 3
    • 9223372036854775807

      kernel: do not call blocking ops when !TASK_RUNNING; state=1 set at <ffff000002a473d0>] ptlrpcd+0x410/0x5c0 [ptlrpc]
      kernel: ------------[ cut here ]------------
      kernel: WARNING: CPU: 35 PID: 14128 at kernel/sched/core.c:5988 __might_sleep+0x84/0x8c 

            simmonsja James A Simmons
            ruth.klundt@gmail.com Ruth Klundt (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: